style.css
#slotmachine{
    width:500px;
    background-color: wheat;
    height: 0px;
    margin:150px auto;
}

.slot{
    width: 32.2%;
    height: 100px;
    line-height: 100px;
    text-align: center;
    background-color: #3498DB;
    display: block;
    margin: 0px;
    color: white;
    font-size: 1em;
    border-radius: 8px;
    float: left;
    vertical-align: middle;
}

.slot a{
    color:white;
}

.slot a:hover{
    color:black;
}

.button {
    background-color: #4CAF50; /* Green */
    border: none;
    padding: 1px 28px;
    text-align: center;
    text-decoration: none;
    display: block;
    font-size: 40px;
    margin: 4px auto;
    -webkit-transition-duration: 0.4s; /* Safari */
    transition-duration: 0.4s;
    cursor: pointer;
    color:white;
    border-radius: 8px;
}

.button1 {
    border: 2px solid #4CAF50;
}

.button1:hover {
    background-color: white;
    color: black;
}

